--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8084
 #spring.h2.console.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/fs-hospital?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=**************
+spring.datasource.password=Tajeddine@2025
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.thymeleaf.cache=false
